Added database connection for Identity service
